@@ -6,6 +6,7 @@ AUX 2.0.0.63231/007_all_use-modprobe-over-insmod.patch 448 RMD160 136dfcfe2df7a7
 AUX 2.0.0.63231/009_all_init.d-modules-warning.patch 965 RMD160 3a98d59bb591aa6498a7dca9751f441b430c6288 SHA1 5b6b1c1330d1108bb769107c73fdc43c1fe46be5 SHA256 dbeb12905d75f06be519cc99e6e0c070b6e08e34cdb813c518b09a04b55876fb
 AUX 2.0.0.63231/011_all_legit-modules-only.patch 646 RMD160 484d15ebc05fb93d69866987cf805afdbba019c9 SHA1 f36a8b4b7153cfe213ee7cd1e82c871f3c9efa90 SHA256 b66a534d93ae7dc76b54631cbbaccc751691941ab704a9c1e566a9c866b15729
 AUX 90vmware-server 91 RMD160 2a9e2e9d428a06ceac7faec500e6b1423da34b25 SHA1 e090847500dd99d161a46cd361ed2297b3d3ecae SHA256 3175cd9665850cf0d25a96849135c93ab129127370d55572f0137ba3d210e423
+AUX authorization.xml 332 RMD160 f31f4300342a9290634e20187351910d72e7c28d SHA1 28e2b07ed7225c83bef3172d23d4702fe92a3f75 SHA256 a6ce67bb812ca67d26e518da4903cf27338865c0f06beb58d4a8ece6021e1630
 AUX general/001_all_no-desktop-icon.patch 1131 RMD160 3ab69d825994cc3bb177143d27091fc292cec46a SHA1 14264460c8500f1ead267059e2b9b9a5dc8c057f SHA256 b4055370b0092e71a2b2b0f27edeb7bc063ad265f95ab4530e52c3ab3167ad62
 AUX general/002_all_allow-write-access-to-config.patch 647 RMD160 0f25f7dd60dfcb5a72b1f7b9cf344d6f431143a9 SHA1 cabd3dd071ef62d4c70f52d1a3e02334ec7f3a73 SHA256 41492cde60da6d449c0f427ac7bd65598838ec17ac0e3a5f545feeb1d29ea391
 AUX general/004_all_do-not-build-modules.patch 589 RMD160 b2153579c65a232de9c2e6dbd9bbe108d85f95e5 SHA1 394a67a30f1f29084836183303641915ce982bfd SHA256 916754b0616ea330490b9572be1a9216bb7dd441ba328b1e01e777b29fac4e1e
@@ -24,5 +25,5 @@ DIST vmware-libcrypto.so.0.9.7l.tar.bz2 412159 RMD160 89282ae9fc6e8921a47704bc9c
 DIST vmware-libssl.so.0.9.7l.tar.bz2 78244 RMD160 195dd4808e60f81621e6ed12b843ded49c0fa747 SHA1 5fe729a1e49e77afd83b408845833174e1296e39 SHA256 3e1e13196066dc5b77d3ef6b5df55a29156eba1f39661e40cd617b538220d089
 DIST vmware-server-perl-fixed-rpath-libs.tar.bz2 73834 RMD160 7f64627b5b945e8d7dabe39c165a4b66b71fb4d3 SHA1 9d696750ca3ec92b31ca8112fd80dcd832494044 SHA256 c42299dd033187c67b45b739da66583fbd94cdcba745200b89a25ac96cd9364b
 EBUILD vmware-server-1.0.4.56528.ebuild 3265 RMD160 3ca6e5245b40fec55644041f0bbbebd528b9d089 SHA1 97abb8b61deaebffb54d5e9d4cb3f8abf9038458 SHA256 d1fd5661e3344392b0027b49cc808148ead684d96e355164617f03d7648f5e09
-EBUILD vmware-server-2.0.0.63231.ebuild 3134 RMD160 f5426c61c5870f7ada0553c0e234a3bfd227eaf1 SHA1 b7e23cad9efb444ba5a56e04be239f4d0d8e3bad SHA256 58ce6ca5f4c4056eb695af69b8fa8b21f71f6b69f57495b0e5e86b00498f522a
+EBUILD vmware-server-2.0.0.63231.ebuild 3237 RMD160 8c8ed359673e494acbb194b323e74ee9158eb69c SHA1 2b43570289f18ab496627f74d029fec346c85bbd SHA256 7ef2fb7f7639ad66208a8fd12f8aaa2eadff96ed5d9096fc88c80c4139c5c6d4
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
